<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyWallet</string>
    <string name="action_settings">Settings</string>
    <string name="unpaid_list">Unpaid List</string>
    <string name="paid_list">Paid List</string>
    <string name="action_add_payee">Add Payee</string>
    <string name="edit_payee_title">Edit Payee</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_add_payee_hint">Payee Name</string>
    <string name="dialog_add_event_hint">Event Name</string>
    <string name="no_payee_message">No payee found, click here to add some</string>
    <string name="dialog_delete_payee_title">Delete Payee</string>
    <string name="dialog_delete_event_title">Delete Event</string>
    <string name="dialog_delete_expense_title">Delete Expense</string>
    <string name="dialog_delete_payee_message">Are you sure want to delete this payee?</string>
    <string name="dialog_delete_event_message">Are you sure want to delete this event?</string>
    <string name="dialog_delete_expense_message">Are you sure want to delete this expense?</string>
    <string name="dialog_create_new_tag_message">The tag you entered is not present in the payee list you have. A new tag will be created, please confirm.</string>
    <string name="dialog_add_payee_title">Add Payee</string>
    <string name="dialog_edit_payee_title">Edit Payee Name</string>
    <string name="dialog_add_event_title">Add Event</string>
    <string name="dialog_edit_event_title">Edit Event Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_payee_cannot_be_deleted">This payee cannot be deleted, as there exists a few expenses which contain this payee.</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="action_edit_payee">Edit Payee</string>
    <string name="add_expense_title">Add Expense</string>
    <string name="amount_field_hint">Amount</string>
    <string name="description_field_hint">Description</string>
    <string name="payer_field_hint">Click below to add payers</string>
    <string name="payee_field_hint">Click below to add payees</string>
    <string name="action_add_new_payee">Add New Payee</string>
    <string name="action_clear_all_selected_payee">Clear All Selected Payee</string>
    <string name="action_set_custom_date">Set Custom Date</string>
    <string name="action_remove_custom_date">Remove Custom Date</string>
    <string name="set">Set</string>
    <string name="dialog_custom_date_time_title">Set Custom Date &amp; Time</string>
    <string name="no_unpaid_expense_msg">No unpaid expense found</string>
    <string name="no_paid_expense_message">No paid expense found</string>
    <string name="no_payer_event_msg">No payer found for this event</string>
    <string name="no_payer_expense_msg">No expense found for this payer</string>
    <string name="no_event_expense_msg">No expense found for this event</string>
    <string name="no_included_event_expense_msg">No included expense found for this event</string>
    <string name="expense_list_title">Expense List</string>
    <string name="included_list_title">Included List</string>
    <string name="action_edit_expense">Edit Expense</string>
    <string name="action_mark_as_paid">Mark As Paid</string>
    <string name="action_delete_expense">Delete Expense</string>
    <string name="action_mark_as_unpaid">Mark As Unpaid</string>
    <string name="action_mark_all_as_paid">Mark All As Paid</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_event">My Events</string>
    <string name="action_edit_event_name">Edit Event Name</string>
    <string name="action_delete_event">Delete Event</string>
    <string name="action_reckon_up_event">Reckon Up Event</string>
    <string name="add_event">Add Event</string>
    <string name="action_add_event">Add Event</string>
    <string name="event_list_title">My Event</string>
    <string name="no_event_message">No event found</string>
    <string name="reckon_up_title">Reckon Up</string>
    <string name="reckon_up_list_title">ReckonUp List</string>
    <string name="debt_list_title">Debt List</string>
    <string name="export_import">Export/Import</string>
    <string name="prefs_automatic_backup_key">prefs_automatic_backup_key</string>
    <string name="prefs_automatic_backup_title">Export to sdCard on exit</string>
    <string name="prefs_automatic_backup_summary">The database will be exported to sdCard on exiting the app</string>
    <string name="prefs_no_of_backups_key">prefs_no_of_backups_key</string>
    <string name="prefs_no_of_backups_title">No. of Backups</string>
    <string name="prefs_no_of_backups_summary">No. of backups to be kept in sdCard, after exceeding this number, the backups will start cleaning themselves choronologically</string>
    <string name="prefs_export_key">prefs_export_key</string>
    <string name="prefs_export_title">Export to sdCard</string>
    <string name="prefs_export_summary">The current database will be exported to sdCard. The backup path will be\nsdCard/MyWallet/databases/&#8230;\nNote:- Please do not move this file, otherwise all backup data will be lost.</string>
    <string name="prefs_import_key">prefs_import_key</string>
    <string name="prefs_import_title">Import from sdCard</string>
    <string name="prefs_import_summary">This import will override the current database. All changes made after the export of this backup will be lost.\nNote:- Make sure that the sdCard is mounted.</string>
    <string name="prefs_secure_app_key">prefs_secure_app_key</string>
    <string name="prefs_secure_app_title">Secure This App</string>
    <string name="prefs_secure_app_summary_on">Your app is password protected.</string>
    <string name="prefs_secure_app_summary_off">You can protect your app using pattern password, on the switch to get started.</string>
    <string name="setting_activity_title">Preferences</string>
    <string name="export_warning_message">Your Data will be backed up on sdCard.\nNote:- The previous backup will be overwrited.</string>
    <string name="import_warning_message">Your data will be reverted to last saved database.\nNote:- All data saved after backup will be lost.</string>
    <string name="prefs_profile_info_key">prefs_profile_info_key</string>
    <string name="prefs_profile_info_title">Reset Personal Info</string>
    <string name="action_add_all_previous_payees">Add All Previous Payees</string>
    <string name="payee_list_title">Payee List</string>
    <string name="action_remind_me">Remind Me</string>
    <string name="add_shortcut_activity_title">Add Expense</string>
    <string name="send_to">Share With&#8230;</string>
    <string name="action_expand">Expand All</string>
    <string name="action_collapse">Collapse All</string>
    <string name="dialog_mark_all_as_paid_for_all_payee_title">Alert</string>
    <string name="dialog_mark_all_as_paid_for_all_payee_message">Are you sure want to mark all the expenses as paid for all the payees?</string>
    <string name="dialog_mark_all_as_paid_for_one_payee_title">Alert</string>
    <string name="dialog_mark_all_as_paid_for_one_payee_message">Are you sure want to mark all the expenses as paid for this payee?</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="Introduction">Introduction</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_tag">I already have my tag</string>
    <string name="new_tag_hint">Your tag name</string>
    <string name="already_have_tag_hint">Enter a character to choose from existing tags</string>
    <string name="introduction_message">Sometimes you need to add yourself in some expenses with others, please enter your personal information for the reference.</string>
    <string name="continue_text">Continue</string>
    <string name="expense_list_share_text_01" formatted="false">After reckoning up:\n%s will get an amount of ₹%d in total from %s."</string>
    <string name="expense_list_share_text_02" formatted="false">\n- %s will give %s ₹%d%s spent at %s</string>
    <string name="share_text_footer" formatted="false">\n—shared from MyWallet</string>
    <string name="event_expense_list_share_text_01" formatted="false">%s\'s expenses for %s:\n%s spent an amount of ₹%d in total"</string>
    <string name="event_expense_list_share_text_04" formatted="false">\n- %s spent an amount of ₹%d on %s%s at %s</string>
    <string name="event_expense_list_share_text_02" formatted="false">\n\nExpenses spent on %s for %s:\nAn amount of ₹%d was spent in total on %s</string>
    <string name="event_expense_list_share_text_03" formatted="false">"\n- An amount of ₹%d was spent by %s on %s%s at %s</string>
</resources>