<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_share"
        android:title="Share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_reckon_up_event"
        android:icon="@drawable/ic_reckon_up"
        android:orderInCategory="2"
        android:title="@string/action_reckon_up_event"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_mark_all_as_paid"
        android:icon="@drawable/ic_add_holo_light"
        android:orderInCategory="2"
        android:title="@string/action_mark_all_as_paid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_expense"
        android:icon="@drawable/ic_add_holo_light"
        android:orderInCategory="3"
        android:title="@string/action_add_expense"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit_payee"
        android:orderInCategory="4"
        android:title="@string/action_edit_payee"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>