<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_expense"
        android:orderInCategory="1"
        android:title="@string/action_edit_expense"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_mark_as_paid"
        android:orderInCategory="2"
        android:title="@string/action_mark_as_paid"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_remind_me"
        android:orderInCategory="3"
        android:title="@string/action_remind_me"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_remind_payee"
        android:orderInCategory="4"
        android:title="@string/action_remind_me"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_expense"
        android:orderInCategory="5"
        android:title="@string/action_delete_expense"
        app:showAsAction="never">
    </item>

</menu>